unpackaged/main/default/objects/Activity/fields/Contact_Guid__c.field-meta.xml
<CustomField>
    <fullName>Contact_Guid__c</fullName>
    <externalId>true</externalId>
    <label>Contact Guid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>