unpackaged/main/default/objects/Activity/fields/Owner_GUID__c.field-meta.xml
<CustomField>
    <fullName>Owner_GUID__c</fullName>
    <externalId>true</externalId>
    <label>Owner GUID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>