unpackaged/main/default/objects/Activity/fields/Related_To_Guid__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Guid__c</fullName>
    <externalId>true</externalId>
    <label>Related To Guid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>