unpackaged/main/default/objects/Activity/fields/Sent_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Name__c</fullName>
    <description>Drift - Field required</description>
    <label>Sent to Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>